[gd_scene load_steps=4 format=3 uid="uid://dn6gry3n4rvt8"]

[ext_resource type="Script" uid="uid://o1p177jd4duj" path="res://src/wander_component.gd" id="1_loagr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_loagr"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eo03y"]
radius = 17.262676

[node name="WanderComponent" type="Node2D"]
script = ExtResource("1_loagr")
enabled = false

[node name="StateTimer" type="Timer" parent="."]

[node name="ThinkTimer" type="Timer" parent="."]

[node name="SensorArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorArea"]
shape = SubResource("CircleShape2D_loagr")

[node name="GatheringSensorArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GatheringSensorArea"]
shape = SubResource("CircleShape2D_eo03y")

[node name="StateLabel" type="Label" parent="."]
offset_left = -5.0
offset_top = -13.0
offset_right = 35.0
offset_bottom = 1.0
scale = Vector2(0.25, 0.25)
horizontal_alignment = 1
